增加了卡片列表页，文章详情页增加了 markdown 排版

--- a/content/blog/11-15-2024.md
+++ b/content/blog/11-15-2024.md
@@ -1,3 +1,17 @@
+---
+title: 春日漫步：上海的一次难忘郊游
+description: 记录一次阴云密布但充满生机的春日上海郊游，体验大自然的变幻莫测和生命的顽强
+date: 2024-04-15
+tags:
+  - 旅行
+  - 上海
+  - 春天
+  - 自然
+author: 匿名作者
+cover: /images/spring-shanghai-journey.jpg
+language: zh-CN
+---
+
 # 春日漫步：上海的一次难忘郊游
 
 ## 2024年4月15日 多云转阴 上海
@@ -25,5 +39,3 @@
 傍晚时分，天空依然阴沉，但空气中的湿意让人感到一丝春的温柔。我满足地踏上返程的路，背包里装满了这一天的静谧回忆。
 
 今天的郊游，是对生活的一次深入思考，也是对春天多变性格的一次温柔致敬。
-
-
