生成了 meta 信息

--- a/content/blog/11-19-2024.md
+++ b/content/blog/11-19-2024.md
@@ -1,13 +1,24 @@
-## 前8课围绕NUXT的个人知识总结
+---
+title: 前8课围绕NUXT的个人知识总结
+description: Nuxt3学习笔记，包括安装、目录结构、组件、路由和内容管理等基础知识
+tags: 
+  - Nuxt3
+  - Vue
+  - Web开发
+  - 学习笔记
+author: 学习者
+date: 2024-01-19
+cover: /images/nuxt-learning.png
+---
 
+## 前8课围绕NUXT的个人知识总结
 ### nuxt的安装和启动
 ##### 前置要求:
 安装 node
 安装 npm
 
 ##### 安装并创建nuxt项目
-- 使用npx安装
-```
+- 使用npx安装```
 npx nuxi@latest init <project-name>
 ```
 #### 安装 nuxtUI
